--- a/ci/test/test.yml
+++ b/ci/test/test.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang:latest
+    repository: golang
+    tag: latest
 
 inputs:
 - name: shipit
